tests/baselines/reference/jsxEsprimaFbTestSuite.errors.txt
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(30,12): error TS2304: Cannot find name 'c'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(30,20): error TS2304: Cannot find name 'd'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(32,4): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(34,4): error TS1109: Expression expected.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(36,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(38,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(38,7): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(40,30): error TS2304: Cannot find name 'b'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(42,2): error TS2503: Cannot find namespace 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(42,2): error TS2304: Cannot find name 'a.b'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(44,2): error TS2503: Cannot find namespace 'a'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(44,2): error TS2304: Cannot find name 'a.b.c'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(46,3): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(48,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(50,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx(52,2): error TS2304: Cannot find name 'div'.


==== tests/cases/conformance/jsx/jsxEsprimaFbTestSuite.tsx (16 errors) ====
    /// <JSX factory="React.createElement" />
    declare var React: any;
    declare var 日本語;
    declare var AbC_def;
    declare var LeftRight;
    declare var x;
    declare var a;
    declare var props;
    
    <a />;
    
    //<n:a n:v />; Namespace unsuported
    
    //<a n:foo="bar"> {value} <b><c /></b></a>;  Namespace unsuported
    
    <a b={" "} c=" " d="&amp;" e="id=1&group=2" f="&#123456789" g="&#123*;" h="&#x;" />;
    
    <a b="&notanentity;" />;
    <a
    />;
    
    <日本語></日本語>;
    
    <AbC_def
      test="&#x0026;&#38;">
    bar
    baz
    </AbC_def>;
    
    <a b={x ? <c /> : <d />} />;
               ~
!!! error TS2304: Cannot find name 'c'.
                       ~
!!! error TS2304: Cannot find name 'd'.
    
    <a>{}</a>;
       ~~
!!! error TS1109: Expression expected.
    
    <a>{/* this is a comment */}</a>;
       ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1109: Expression expected.
    
    <div>@test content</div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div><br />7x invalid-js-identifier</div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
          ~~
!!! error TS2304: Cannot find name 'br'.
    
    <LeftRight left=<a /> right=<b>monkeys /> gorillas</b> />;
                                 ~
!!! error TS2304: Cannot find name 'b'.
    
    <a.b></a.b>;
     ~
!!! error TS2503: Cannot find namespace 'a'.
     ~~~
!!! error TS2304: Cannot find name 'a.b'.
    
    <a.b.c></a.b.c>;
     ~
!!! error TS2503: Cannot find namespace 'a'.
     ~~~~~
!!! error TS2304: Cannot find name 'a.b.c'.
    
    (<div />) < x;
      ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div {...props} />;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div {...props} post="attribute" />;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div pre="leading" pre2="attribute" {...props}></div>;
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <a>    </a>;
    